--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "-": "^0.0.1",
     "@fontsource/montserrat": "^5.0.18",
+    "@tanstack/react-query": "^5.37.1",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.2",
     "D": "^1.0.0",
     "next": "14.1.3",
     "react": "^18",
