--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/montserrat": "^5.0.18",
+    "@mui/material": "^5.15.18",
     "@tanstack/react-query": "^5.37.1",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.2",
     "D": "^1.0.0",
+    "framer-motion": "^11.2.6",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
